<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="first_preferencescreen">
	 <PreferenceCategory
	   android:summary="@string/preference_login_information"
	   android:title="@string/preference_login_informantion_summary" >
	  	<EditTextPreference
	     android:key="username"
	     android:summary="@string/preference_username_summary"
	     android:title="@string/preference_username" />
	  	<EditTextPreference
	     android:key="password"
	     android:summary="@string/preference_password_summary"
	     android:title="@string/preference_password"
	     android:inputType="textPassword"
	      />
	 </PreferenceCategory>
   
	 
	 	 <PreferenceCategory
	   android:summary="@string/preference_server_information_summary"
	   android:title="@string/preference_server_information_title" >
	  	<EditTextPreference
	     android:key="library_url"
	     android:summary="@string/preference_library_url_address_summary"
	     android:title="@string/preference_library_url_address" />

	 </PreferenceCategory>
  
	  <PreferenceScreen
                android:key="NotificationsPrefScreen"
                android:title="@string/preference_notification_preference_screen_title"
                android:summary="@string/preference_notification_preference_screen_summary">
				
				<CheckBoxPreference 
				    android:title="@string/preference_enable_notifications"
				    android:key="notifications_enabled"
				    android:summaryOn="@string/preference_enable_notifications_summary_on"
				    android:summaryOff="@string/preference_enable_notifications_summary_off"
				    />	
	      
				<ListPreference
				    android:title="@string/preference_notifications_days_before"
				    android:key="notifications_days_before_expiration"
				    android:summary="@string/preference_notifications_days_before_summary"
				    android:entries="@array/notification_preferences_list_entries"
				    android:entryValues="@array/notification_preferences_list_values"
				    android:defaultValue="@integer/notification_preferences_list_default_value"
				    />
				
				<CheckBoxPreference 
				    android:title="@string/preference_notifications_each_day"
				    android:key="notifications_each_day_before_expiration"
				    android:summary="@string/preference_notifications_each_day_summary"
				    />
        </PreferenceScreen>
</PreferenceScreen> 