<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   
    <include android:id="@+id/header_actionbar" layout="@layout/simple_actionbar"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Content"
        >

        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_bookbag"
            />
        <EditText 
            android:id="@+id/bookbag_create_name"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:hint="@string/bookbag_name"
            />
        <Button
            android:id="@+id/bookbag_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            />
        
    </LinearLayout>
    
	<LinearLayout 
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical" 
	android:paddingLeft="5dip"
	android:paddingTop="10dip"
	>
	   
		<TextView
		style="@style/TitleSearchStyleList"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/bags_name"
		/>   
	    
		<TextView
		style="@style/TitleSearchStyleList"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/bags_items"
		/>
		
		
		<TextView
		style="@style/TitleSearchStyleList"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/bags_shared"
		/>
		
		<TextView
		 style="@style/TitleSearchStyleList"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/bags_action" 
		 android:layout_gravity="right"
		 android:gravity="center"
		    />
		
	</LinearLayout>
     
	<ListView 
	  android:id="@+id/bookbag_list"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"  
	  android:paddingTop="10dip"
	  ></ListView>

</LinearLayout>