<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
          <TextView 
            android:text="@string/bookbag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        
        <TextView 
            android:id="@+id/bookbag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        
        <Button 
            android:id="@+id/remove_bookbag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            />
        
    </LinearLayout>
    
    
	<LinearLayout 
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical" 
	android:paddingLeft="5dip"
	>
	   
		<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/title"
		android:gravity="center"
		/>   
	    
		<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/author"
		/>

		<TextView
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/bags_action" 
		 android:layout_gravity="right"
		 android:gravity="center"
		  />
		
	</LinearLayout>
     
	<ListView 
	  android:id="@+id/bookbagitem_list"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"  
	  android:paddingTop="10dip"
	  ></ListView>

</LinearLayout>