<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
  
  	<include android:id="@+id/header_actionbar" layout="@layout/simple_actionbar"/>
        
    	<LinearLayout
    	    android:id="@+id/action_bar"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center_horizontal"
	        android:layout_alignParentBottom="true"
	        android:layout_centerInParent="true"
	     	>
	        <Button
	            android:id="@+id/back_button"
	            android:layout_width="100dip"
	            android:layout_height="wrap_content"
	            android:text="@string/back"
	            />
	        
	        <Button 
	            android:id="@+id/cancel_hold_button"
	            android:layout_width="100dip"
	            android:layout_height="wrap_content"
	            android:text="@string/cancel_hold"
	            />	 
	            
	         <Button 
	            android:id="@+id/update_hold_button"
	            android:layout_width="100dip"
	            android:layout_height="wrap_content"
	            android:text="@string/update_hold"
	            />	
	    </LinearLayout>
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_above="@id/action_bar"
        android:layout_below="@id/header_actionbar"
        >
       <LinearLayout 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >
            <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/recipient"
		            />
		        
		        <TextView 
		            android:id="@+id/hold_recipient"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            />    
	    </LinearLayout>
	    	        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/title"
		            />
		        
		        <TextView 
		            android:id="@+id/hold_title"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            />    
	    </LinearLayout>
	    	        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/author"
		            />
		        
		        <TextView 
		            android:id="@+id/hold_author"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            />    
	    </LinearLayout>
	    	        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/physical_description"
		            />
		        
		        <TextView 
		            android:id="@+id/hold_physical_description"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            />    
	    </LinearLayout>
	    	        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/contact_telephone"
		            />
		        
		        <EditText
		            android:id="@+id/hold_contact_telephone"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            />    
	    </LinearLayout>
	    	        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/enable_phone_notification"
		            />
		        
		        <CheckBox
		            android:id="@+id/hold_enable_phone_notification"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            />    
	    </LinearLayout>
	    	        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/enable_email_notification"
		            />
		        
		        <CheckBox
		            android:id="@+id/hold_enable_email_notification"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            />    
	    </LinearLayout>
	    	        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/pickup_location"
		            />
		        
		        <Spinner
		            android:id="@+id/hold_pickup_location"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            />    
	    </LinearLayout>
	    	        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/expiration_date"
		            />
		        
		        <EditText 
		            android:id="@+id/hold_expiration_date"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            android:hint="@string/hold_expire_time_hint"
		            />
		        
		        
	    </LinearLayout>
	    
	    	     <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/suspend_hold"
		            />
		        
		        <CheckBox
		            android:id="@+id/hold_suspend_hold"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            />    
	    </LinearLayout>

 	         <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		        <TextView 
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/thaw_date"
		            />
		        
		        <EditText 
		            android:id="@+id/hold_thaw_date"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:gravity="center"
		            android:hint="@string/hold_thaw_date_hint"
		            />
		        
		        
	    </LinearLayout>
 	     
       </LinearLayout>
    
    </ScrollView>


</RelativeLayout>