<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dip"
    android:layout_weight="1"
    android:background="@drawable/background_grey_image"
     >
       <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button android:id="@+id/account_btn_check_out"
            style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/title_check_out"
            android:drawableTop="@drawable/check_out"/>
        <Button android:id="@+id/account_btn_holds"
            style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/title_holds"
            android:drawableTop="@drawable/holds"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button android:id="@+id/account_btn_fines"
            style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/title_fines"
            android:drawableTop="@drawable/fines"/>
        <Button android:id="@+id/account_btn_book_bags"
            style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/title_book_bags"
            android:drawableTop="@drawable/book_bag"/>
    </LinearLayout>

</LinearLayout>