<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout 
        android:id="@+id/credentials"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        >
        
        <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
	        <TextView 
	        android:layout_width = "wrap_content"
	        android:layout_height = "wrap_content"
	        android:text = "@string/server_name_dialog"
	        />   
	        
	        <EditText 
	            android:id="@+id/server_http_adress"
	            android:layout_width="200dip"
	            android:layout_height="wrap_content"
	            android:hint="@string/server_name_dialog"
	            />
            
        </TableRow>
        <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
	        <TextView 
	        android:layout_width = "wrap_content"
	        android:layout_height = "wrap_content"
	        android:text = "@string/username"
	        />   
	        
	        <EditText 
	            android:id="@+id/username"
	            android:layout_width="200dip"
	            android:layout_height="wrap_content"
	            android:hint="@string/username"
	            />
            
        </TableRow>
        <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
	        <TextView 
	        android:layout_width = "wrap_content"
	        android:layout_height = "wrap_content"
	        android:text = "@string/password"
	        />   
	        
	        <EditText 
	            android:id="@+id/password"
	            android:layout_width="200dip"
	            android:layout_height="wrap_content"
	            android:password="true"
	            />
            
        </TableRow>
    </TableLayout> 
    
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@id/credentials"
        />
    <Button 
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_button"
        android:layout_below="@id/credentials"
        android:layout_toRightOf="@id/cancel_button"
        />
    
</RelativeLayout>